regression-tests/test-results/clang-15-c++20-libcpp/pure2-range-operators.cpp.output
pure2-range-operators.cpp2:49:34: error: expected namespace name
            using namespace std::views;
                            ~~~~~^
1 error generated.
